[package]
name = "stm32f411-temp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
panic-halt = "0.2.0"


# this lets you use `cargo fix`!
[[bin]]
name = "stm32f411-temp-rs"
test = false
bench = false

[profile.release]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

[profile.dev.package."*"]
opt-level = "z"
