[package]
name = "stm32f411-temp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
cortex-m-rtic = "1.1.3"
embedded-graphics = "0.7.1"
embedded-storage = "0.2"
heapless = "0.7.16"
lm75 = "0.2.0"
num-traits = { version = "0.2.15", default-features = false, features = [
    "libm",
] }
panic-halt = "0.2.0"
shared-bus = { version = "0.2.5", features = ["cortex-m"] }
ssd1306 = "0.7.1"

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["stm32f411", "rtic"]


# this lets you use `cargo fix`!
[[bin]]
name = "stm32f411-temp-rs"
test = false
bench = false

[profile.release]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

[profile.dev.package."*"]
opt-level = "z"
